--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postmark": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run mjml:build",
+    "mjml:build": "mkdir -p dist/templates && mjml templates/mjml/test-template.mjml -o dist/templates/test-template.html && mjml templates/mjml/b2b-template.mjml -o dist/templates/b2b-template.html",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
     "prepare": "husky",
@@ -25,15 +26,18 @@
     "dotenv": "^17.1.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^152.0.0",
+    "html-to-text": "^9.0.5",
     "postmark": "^4.0.5",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^24.0.10",
     "@types/yargs": "^17.0.33",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
     "markdownlint-cli2": "^0.18.1",
+    "mjml": "^4.7.1",
     "msw": "^2.10.3",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
